# agentic-reportcraft

./: .gitignore  main.py  pyproject.toml  requirements.txt
Research_and_Analyst/backend_server/: models.py
Research_and_Analyst/notebook/: test.ipynb
Research_and_Analyst/prompt_lib/: prompt.py
Research_and_Analyst/utils/: config_loader.py
notebook/: test.ipynb
